--- a/package.json
+++ b/package.json
@@ -1,36 +1,60 @@
 {
-    "name": "react-native-check-app-install",
-    "version": "0.0.5",
-    "description": "React Native plugin for checking if apps/packages are installed on the device or not.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "peerDependencies": {
-        "react-native": ">=0.40.0",
-        "react": ">=15.4.0"
-    },
-    "keywords": [
-        "app-install",
-        "react-native",
-        "react-component",
-        "ios",
-        "android"
-    ],
-    "author": "RedPandaTronics LTD",
-    "license": "MIT",
-    "nativePackage": true,
-    "rnpm": {
-        "android": {
-            "sourceDir": "./android"
-        }
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/redpandatronicsuk/react-native-check-app-install.git"
-    },
-    "bugs": {
-        "url": "https://github.com/redpandatronicsuk/react-native-check-app-install/issues"
-    },
-    "homepage": "https://github.com/redpandatronicsuk/react-native-check-app-install#readme"
+  "name": "react-native-check-app-install",
+  "version": "0.0.5",
+  "description": "React Native plugin for checking if apps/packages are installed on the device or not.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "react-native": ">=0.40.0",
+    "react": ">=15.4.0"
+  },
+  "keywords": [
+    "app-install",
+    "react-native",
+    "react-component",
+    "ios",
+    "android"
+  ],
+  "author": "RedPandaTronics LTD",
+  "license": "MIT",
+  "nativePackage": true,
+  "rnpm": {
+    "android": {
+      "sourceDir": "./android"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/redpandatronicsuk/react-native-check-app-install.git"
+  },
+  "bugs": {
+    "url": "https://github.com/redpandatronicsuk/react-native-check-app-install/issues"
+  },
+  "homepage": "https://github.com/redpandatronicsuk/react-native-check-app-install#readme",
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
+  }
 }
